syntax = "proto3";


package proto;

service ServerRequests{
    rpc CreateAccount (CreateAccountRequest) returns(CreateAccountReply){}
    rpc Login (LoginRequest) returns(LoginReply){}
}

message CreateAccountRequest{
    string appKey = 1;
    string email = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
}

message CreateAccountReply{
    string appKey = 1;
    string accessToken = 2;
    string refreshToken = 3;
    map<string, string> errorList = 4;
}

message LoginRequest{
    string appKey = 1;
    string email = 2;
    string password = 3;
}

message LoginReply{
    string appKey = 1;
    string accessToken = 2;
    string refreshToken = 3;
    map<string, string> errorList = 4;
}